# poker-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml  README.md
backend/migrations/: V1__init.sql  V2__room_info.sql  V3__sid.sql
backend/src/: error.rs  extensions.rs  main.rs  routes.rs
backend/src/domain/: auth.rs  mod.rs  request.rs  room.rs  state.rs  user.rs
backend/src/repository/: auth.rs  mod.rs  rooms.rs  users.rs
backend/src/service/: auth.rs  game.rs  mod.rs  users.rs
backend/types/: Cargo.toml
backend/types/src/: deck.rs  domain.rs  error.rs  lib.rs  room.rs  state.rs
client/: Cargo.toml
client/src/: client.rs  domain.rs
common/: Cargo.toml
common/src/: lib.rs
e2e/: Cargo.toml
e2e/src/: client.rs  domain.rs  lib.rs  payloads.rs  tests.rs  util.rs
migrations/: V1__init.sql
src/: error.rs  main.rs  routes.rs
src/domain/: auth.rs  deck.rs  mod.rs  room.rs  user.rs
src/repository/: auth.rs  mod.rs  rooms.rs  sessions.rs  users.rs
src/service/: auth.rs  game.rs  mod.rs
ui/: Cargo.toml  LICENSE  README.md  build.rs
ui/src/: app.rs  data.rs  extension.rs  game.rs  lobby.rs  login.rs  main.rs  screen_data.rs
ui/text_assets/: 2c.txt  2d.txt  2h.txt  2s.txt  3c.txt  3d.txt  3h.txt  3s.txt  4c.txt  4d.txt  4h.txt  4s.txt  5c.txt  5d.txt  5h.txt  5s.txt  6c.txt  6d.txt  6h.txt  6s.txt  7c.txt  7d.txt  7h.txt  7s.txt  8c.txt  8d.txt  8h.txt  8s.txt  9c.txt  9d.txt  9h.txt  9s.txt  Ac.txt  Ad.txt  Ah.txt  As.txt  Jc.txt  Jd.txt  Jh.txt  Js.txt  (+12 more)
