[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
bcrypt = "0.17.0"
dashmap = "6.1.0"
env_logger = "0.11.6"
eyre = "0.6.12"
lazy_static = "1.5.0"
log = "0.4.25"
poker = "0.6.4"
rand = "0.8.4"
refinery = { version = "0.8.14", features = ["postgres", "tokio-postgres"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.12.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.24.0"
faux = "0.1.12"


