[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
eyre = "0.6.12"
rust_socketio = { version="0.6.0", features = ["async"] }
types = { path = "../backend/types" }
log = "0.4.25"
lazy_static = "1.5.0"
random_name_generator = "0.3.6"




