[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
eyre = "0.6.12"
uuid = { version = "1.12.0", features = ["v4", "serde"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
rand = "0.9.0"
tap = "1.0.1"
async-trait = "0.1.86"
futures-util = "0.3.31"
rust_socketio = { version="0.6.0", features = ["async"] }

