[package]
name = "ui"
version = "0.1.0"
authors = ["yewjung <yewjung@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tui-input = "0.11.1"
client = { path = "../client" }
tokio = "1.43.0"
types = { path = "../backend/types" }
chrono = "0.4.39"
cli-log = "2.1.0"
async-trait = "0.1.86"
lazy_static = "1.5.0"
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "sync-secret-service"]}
dashmap = "6.1.0"
ansi-to-tui = "7.0.0"
uuid = { version = "1.13.1", features = ["v4"] }
artem = "3.0.0"
poker = "0.6.4"
image = "0.25.5"
common = { path = "../common" }
log = "0.4.27"
tui-big-text = "0.7.1"

[build-dependencies]
artem = "3.0.0"
poker = "0.6.4"
image = "0.25.5"




