[package]
name = "ui"
version = "0.1.0"
authors = ["yewjung <yewjung@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tui-input = "0.11.1"
client = { path = "../client" }
tokio = "1.43.0"
types = { path = "../backend/types" }
chrono = "0.4.39"
cli-log = "2.1.0"
async-trait = "0.1.86"
lazy_static = "1.5.0"
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "sync-secret-service"]}
ansi-to-tui = "7.0.0"
uuid = { version = "1.13.1", features = ["v4"] }
common = { path = "../common" }
tui-big-text = "0.7.1"
poker = "0.6.4"
log = "0.4.25"
rodio = "0.20.1"
derive_more = { version = "2.0.1", features = ["as_ref"] }
tap = "1.0.1"
