[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
sqlx ="0.8.3"
eyre = "0.6.12"
strum_macros = "0.27.1"
poker = "0.6.4"
rand = "0.8.4"
thiserror = "2.0.11"
chrono = { version="0.4.39", features = ["serde"] }
axum = "0.8.1"
socketioxide = { version="0.16.1", features = ["extensions"] }
derive_more = {  version = "2.0.1", features = ["deref"] }
strum = { version = "0.27.1", features = ["derive"] }
ratatui = "0.29.0"
itertools = "0.14.0"
tap = "1.0.1"
